<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.derekjass.poolscoresheet"
	android:id="@+id/homeTeamViews"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<include layout="@layout/row_column_headers" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<include
			android:id="@+id/homeP1Ave"
			layout="@layout/box_average" />

		<EditText
			android:id="@+id/homeP1Name"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/box_white"
			android:hint="@string/player1"
			android:inputType="textPersonName"
			android:paddingLeft="4dp"
			android:textSize="@dimen/player_text_size" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP1R1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game1"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="1"
			app:round="1" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP1R2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game1"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="1"
			app:round="2" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP1R3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game1"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="1"
			app:round="3" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeP1Total"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="not_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<include
			android:id="@+id/homeP2Ave"
			layout="@layout/box_average" />

		<EditText
			android:id="@+id/homeP2Name"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/box_white"
			android:hint="@string/player2"
			android:inputType="textPersonName"
			android:paddingLeft="4dp"
			android:textSize="@dimen/player_text_size" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP2R1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game2"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="2"
			app:round="1" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP2R2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game2"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="2"
			app:round="2" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP2R3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game2"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="2"
			app:round="3" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeP2Total"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="not_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<include
			android:id="@+id/homeP3Ave"
			layout="@layout/box_average" />

		<EditText
			android:id="@+id/homeP3Name"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/box_white"
			android:hint="@string/player3"
			android:inputType="textPersonName"
			android:paddingLeft="4dp"
			android:textSize="@dimen/player_text_size" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP3R1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game3"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="3"
			app:round="1" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP3R2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game3"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="3"
			app:round="2" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP3R3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game3"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="3"
			app:round="3" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeP3Total"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="not_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<include
			android:id="@+id/homeP4Ave"
			layout="@layout/box_average" />

		<EditText
			android:id="@+id/homeP4Name"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/box_white"
			android:hint="@string/player4"
			android:inputType="textPersonName"
			android:paddingLeft="4dp"
			android:textSize="@dimen/player_text_size" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP4R1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game4"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="4"
			app:round="1" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP4R2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game4"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="4"
			app:round="2" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP4R3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game4"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="4"
			app:round="3" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeP4Total"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="not_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<include
			android:id="@+id/homeP5Ave"
			layout="@layout/box_average" />

		<EditText
			android:id="@+id/homeP5Name"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/box_white"
			android:hint="@string/player5"
			android:inputType="textPersonName"
			android:paddingLeft="4dp"
			android:textSize="@dimen/player_text_size" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP5R1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game5"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="5"
			app:round="1" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP5R2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game5"
			android:onClick="onScoreBoxClicked"
			app:breaks="false"
			app:game="5"
			app:round="2" />

		<com.derekjass.poolscoresheet.views.PlayerScoreView
			android:id="@+id/homeP5R3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_game5"
			android:onClick="onScoreBoxClicked"
			app:breaks="true"
			app:game="5"
			app:round="3" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeP5Total"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="not_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeAve"
			android:layout_width="@dimen/ave_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/ave_text_size" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|right"
			android:paddingRight="2dp"
			android:text="@string/subtotals" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeSubtotalR1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeSubtotalR2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeSubtotalR3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeSubtotalR4"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|right"
			android:paddingRight="2dp"
			android:text="@string/round_ave" />

		<com.derekjass.poolscoresheet.views.IntegerView
			android:id="@+id/homeAveR1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:mustSum="false" />

		<com.derekjass.poolscoresheet.views.IntegerView
			android:id="@+id/homeAveR2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:mustSum="false" />

		<com.derekjass.poolscoresheet.views.IntegerView
			android:id="@+id/homeAveR3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:mustSum="false" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeAveR4"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_white"
			android:gravity="center"
			android:textSize="@dimen/score_text_size" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/row_height" >

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|right"
			android:paddingRight="2dp"
			android:text="@string/totals" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeTotalR1"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_circleable"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeTotalR2"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_circleable"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeTotalR3"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_circleable"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />

		<com.derekjass.poolscoresheet.views.SumView
			android:id="@+id/homeTotalR4"
			android:layout_width="@dimen/score_box_width"
			android:layout_height="match_parent"
			android:background="@drawable/box_circleable"
			android:gravity="center"
			android:textSize="@dimen/score_text_size"
			app:sumRule="gray_when_missing" />
	</LinearLayout>

</LinearLayout>